--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>WhatiSac | Sua central de Atendimento ao Cliente</title>
+		<title>appBot | Launcher & Co.</title>
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -10,7 +10,7 @@
 		<link rel="icon" href="%REACT_APP_BACKEND_URL%/public/logotipos/favicon.ico" />
 		<link rel="shortcut icon" href="%REACT_APP_BACKEND_URL%/public/logotipos/favicon-256x256.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<meta name="theme-color" content="#0050FF" />
+		<meta name="theme-color" content="#000000" />
 		<meta
 			name="viewport"
 			content="minimum-scale=1, initial-scale=1, width=device-width"
