--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,5 +35,6 @@
 		<!-- End Google Tag Manager (noscript) -->
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
 	</body>
 </html>
