--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
 			name="viewport"
 			content="minimum-scale=1, initial-scale=1, width=device-width"
 		/>
-		<script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+		<script src="https://cdn.lordicon.com/lordicon.js"></script>
 		<!-- Issue workaround for React v16. -->
 		<script>
 			// See https://github.com/facebook/react/issues/20829#issuecomment-802088260
