--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,12 @@
 			content="minimum-scale=1, initial-scale=1, width=device-width"
 		/>
 		<script src="https://cdn.lordicon.com/lordicon.js"></script>
+		<style>
+			lord-icon {
+			  width: 128px;
+			  height: 128px;
+			}
+		  </style>
 		<!-- Issue workaround for React v16. -->
 		<script>
 			// See https://github.com/facebook/react/issues/20829#issuecomment-802088260
